--- a/solar-land/scss/layout/_footer.scss
+++ b/solar-land/scss/layout/_footer.scss
@@ -107,7 +107,7 @@ footer {
 
       .action-buttons {
         display: flex;
-        gap: 1rem;
+        gap: list.nth($spaces, 4);
 
         .social {
           @include button(
